- Added CWnd::IsDialogMessage
- Added CWnd::IsDlgButtonChecked 
- Added CWnd::MapWindowPoints
- Added CWnd::Print
- Added CWnd::PrintWindow
- Added CWnd::ScreenToClient 
- Added CWnd::SendNotifyMessage
- Modified CDialog 				now takes a CWnd pointer instead of HWND
- Modified CResizer::AddChild	now takes a CWnd reference
- Modified CWnd::Create 		now takes a CWnd pointer instead of HWND
- Renamed CDocker::GetDockWidth to CDocker::GetRedockSize
- Renamed CDocker::SetDockWidth to CDocker::SetDockSize
- Moved CWnd::LoadBitmap to LoadBitmap
- Moved CWnd::LoadString to LoadString

Incompatibilities with previous versions
----------------------------------------
* Windows, dialogs and property sheets now use a CWnd pointer instead of a HWND
   to specify the parent window.
* CTab defaults to not using the CS_FIXEDWIDTH and TCS_OWNERDRAWFIXED styles. 
   The SetFixedWidth and SetOwnerDraw functions can be used to change these
   styles.
* Users of Borland's C++ compiler version 5.5 will need to install the 
   compiler's service pack 2 for stringsteam support.  

Version 7.0.2
=============
* Fix for a memory leak in CDC
* Fix for accelerators in WinCE
* Fix for menu check marks when themes are disabled
* Fix for OnMessageReflect in dialogs

Version 7.0.1
=============
* Supports the latest version of MinGW compiler
* DialogProc now returns INT_PTR instead of BOOL
* Fixed several x64 warnings
* Fixed DragAcceptFiles error when WIN32_LEAN_AND_MEAN is defined
* Added OnPaint to CDialog and CPropertyPage
* Minor update to the documentation
* Added targetver.h to samples
* Supports VS2010's resource editor

Incompatibilities with previous versions
----------------------------------------
DialogProc now returns INT_PTR instead of BOOL. This change will be required
in user code as well.


Version 7.0
===========

New Features and Enhancements
-----------------------------
* The following function now return CWnd* instead of HWND: