@@ -23,9 +23,8 @@ HWND CMainWindow::Create(CWnd* pParent /*= 0*/)
 	tString str = _T("Main Window");
 
 	// Create the main window
-	HWND hwndParent = pParent? pParent->GetHwnd() : 0;
 	return CreateEx(WS_EX_TOPMOST, NULL, str.c_str(), WS_OVERLAPPEDWINDOW | WS_VISIBLE,
-		20 , 50, 400, 300, hwndParent, NULL);
+		20 , 50, 400, 300, pParent, NULL);
 }
 
 void CMainWindow::CreateTestWindows(int nWindows)
