@@ -42,6 +42,7 @@ New Features and Enhancements
 - Modified CDialog 				now takes a CWnd pointer instead of HWND
 - Modified CResizer::AddChild	now takes a CWnd reference
 - Modified CWnd::Create 		now takes a CWnd pointer instead of HWND
+- Modified CWnd::CreateEx       now takes a CWnd pointer instead of HWND
 - Renamed CDocker::GetDockWidth to CDocker::GetRedockSize
 - Renamed CDocker::SetDockWidth to CDocker::SetDockSize
 - Moved CWnd::LoadBitmap to LoadBitmap
